# PteraSoftware

./: .codespell-ignore.txt  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BRANCH_PLAN.md  BUILD.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  README.md  SECURITY.md  make_installer.iss  mypy.ini  pyproject.toml  requirements_dev.txt  setup.cfg
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
docs/: ANGLE_VECTORS_AND_TRANSFORMATIONS.md  AXES_POINTS_AND_FRAMES.md  CLASSES_AND_IMMUTABILITY.md  CODE_STYLE.md  GEOMETRY_PLAN.md  MUJOCO_CONVENTIONS.md  OPERATING_POINT_MOVEMENT_PROBLEM_PLAN.md  PANEL_VORTEX_PLAN.md  RUNNING_TESTS_AND_TYPE_CHECKS.md  TYPE_HINT_AND_DOCSTRING_STYLE.md  VORTEX_SINGULARITIES_LOG.md  WRITING_STYLE.md  api.md  conf.py  examples.md  index.md  install.md  internals.md  quickstart.md
examples/: aeroelastic_unsteady_first_order_deformation.py  aeroelastic_unsteady_first_order_deformation_mixed_wings.py  aeroelastic_unsteady_first_order_plotting.py  free_flight_unsteady_ring_vortex_lattice_method_solver_glider.py  mirrored_unsteady_ring_vortex_lattice_method_solver_static.py  steady_horseshoe_vortex_lattice_method_solver.py  steady_ring_vortex_lattice_method_solver.py  unsteady_ring_vortex_lattice_method_solver_static.py  unsteady_ring_vortex_lattice_method_solver_static_ground_effect.py  unsteady_ring_vortex_lattice_method_solver_variable.py
experimental/: airfoil_test.py  validate_airfoil_database.py  validate_naca4_airfoils.py
pterasoftware/: __init__.py  (+20 more)
(+223 files in other folders)
